<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="18dp"
    android:orientation="vertical"
    tools:context=".DetailCategoryFragment">

    <TextView
        android:id="@+id/tv_category_name"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:text="@string/Category_Name"
        android:layout_marginBottom="18dp"/>

    <TextView
    android:id="@+id/tv_category_description"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:text="@string/Category_Description"
    android:layout_marginBottom="18dp"/>

    <Button
        android:id="@+id/btn_profile"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/Ke_Halaman_Activity"/>

    <Button
        android:id="@+id/btn_show_dialog"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/Tampilkan_sebuah_dialog"/>

</LinearLayout>